# voc-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  slack_handlers.py
app/agent/: __main__.py  graph.py  tools.py
app/report/: scheduler.py  weekly.py
db/: schema.sql
eval/: golden.jsonl  run_eval.py
ingest/: embed.py  ingest.py
tests/: conftest.py  test_agent_cli.py  test_agent_graph.py  test_agent_tools.py  test_eval.py  test_report_scheduler.py  test_report_weekly.py  test_slack_handlers.py  test_smoke.py  test_tools_aggregate.py  test_tools_metadata.py  test_tools_search.py
