[project]
name = "voc-agent"
version = "0.1.0"
description = "VoC 분석 Slack 챗봇 — LangGraph 기반 리뷰 분석 + 주간 자동 리포트"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.139.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "openai>=2.44.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "slack-bolt>=1.29.0",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
